# Write-A-Interpreter-In-Ocaml

./: .editorconfig  .gitignore  .ocamlinit  Makefile  README.md  dune-project  main.monkey
lib/: dune  lexer.ml
test/: dune  parse_assignment.ml  parse_function.ml  parse_keywords.ml  parse_signs.ml
